SCSS Minor z-index fixes in modules.scss

--- a/app/assets/scss/modules/modules.scss
+++ b/app/assets/scss/modules/modules.scss
@@ -32,6 +32,8 @@
   left: em($ratio--b);
   right: em($ratio--b);
 
+  z-index: $index--b;
+
   transform: translateY(-50%);
 
   @include margin(0 null);
@@ -49,6 +51,8 @@
   left: 0;
   right: 0;
   bottom: 0;
+
+  z-index: $index--l;
 
   @include media($desktop) {
     padding-bottom: em($ratio--s);
@@ -70,7 +74,6 @@
 .m-hero__background {
   // Hooray for magic number.
   @include position(absolute, em(128) 0 0 0);
-  z-index: -1;
 
   background-size: cover;
   background-position: center;
